# Daedalus

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/: CODEOWNERS  pull_request_template.md
config/: daedalus.local.example.yml
daedalus/: __init__.py  cli.py  config.py  paths.py
docs/: ARCHITECTURE-OVERVIEW.md  CLI-USAGE.md  DAEDALUS-OPERATING-MANUAL.md  LINKEDIN-PROJECT-SUMMARY.md  MVP-CLOSEOUT.md  PORTFOLIO-README.md  PORTFOLIO-SUMMARY.md  PROJECT-INDEX.md  PROJECT-PITCH.md  QUICKSTART.md  README-usage-section.md  RELEASE-CHECKLIST.md  WORKFLOW-MAP.md  architecture.md  change-management-model.md  engineering-memory-model.md  integration-boundary-model.md  local-ollama-setup.md  phase-i-execution-plan.md  phase-i-test-plan.md  phase-i-validation-checklist.md  project-charter.md  prompt-governance-model.md  roadmap.md  security-model.md  task-generation-model.md
examples/: engineering-request.md  vaultwarden-engineering-package.md  vaultwarden-request.md
memory/: README.md  memory-record-template.md
schemas/: adr.schema.json  engineering-package.schema.json  iac-package.schema.json  rollback-plan.schema.json  security-review.schema.json  validation-checklist.schema.json
scripts/: run_engineering_package.py  run_ollama_engineering_package.py  test_ollama_connection.py  validate_repo.py  validate_schemas.py
templates/: adr-template.md  engineering-package-template.md  iac-package-template.md  rollback-plan-template.md  security-review-template.md  validation-checklist-template.md
tests/: test_cli.py  test_generators.py  (+2 more)
(+88 files in other folders)
